jinbe.dev link added + animation on jinbe icons

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img
                             src="img/jinbe.png"
                             alt="Icone do desenvolvedor Claudio Germano - 0xJinbe"
-                            class="conteiner__imagem"
+                            class="conteiner__imagem icone__github"
                         />
                     </a>
 
@@ -112,7 +112,9 @@
 
         <section class="techs" id="techs">
             <div class="techs__descricao">
-                <img src="img/jinbe.png" alt="" class="sobre__logo" />
+                <a href="https://www.jinbe.dev/">
+                    <img src="img/jinbe.png" alt="" class="sobre__logo icone__github" />
+                </a>
                 <h2 class="techs__titulo">Claudio Germano | 0xJinbe</h2>
                 <p class="techs__paragrafo">
                     Eu sou de Uberlândia - MG Brasil - Experienciado em gestão
