text change on tech

--- a/index.html
+++ b/index.html
@@ -117,18 +117,15 @@
                 </a>
                 <h2 class="techs__titulo">Claudio Germano | 0xJinbe</h2>
                 <p class="techs__paragrafo">
-                    Eu sou de Uberlândia - MG Brasil - Experienciado em gestão
-                    comercial geral, abri/fundei a
-                    <a
-                        class="link_underline"
-                        href="https://ghost-web.netlify.app/"
-                        >Ghost Web</a
-                    >
-                    para vender pequenos projetos de TI próprios. Faço
-                    freelancer front-end dev para
-                    <a class="link_underline" href="https://jpegdealers.com/"
-                        >JPEG Dealers</a
-                    >
+                    Eu sou de Uberlândia - MG Brasil - Experiente em gestão comercial geral, abri/fundei a <a
+                    class="link_underline"
+                    href="https://ghost-web.netlify.app/"
+                    >Ghost Web</a
+                > para vender pequenos projetos próprios de TI. Sou dono da <a
+                class="link_underline"
+                href="https://techybaby.com.br/"
+                >Techy Baby </a> e às vezes trabalho como freelancer para projetos cripto.
+                
                 </p>
                 <a
                     href="CV Pt. - Claudio Germano.pdf"
