--- a/index.html
+++ b/index.html
@@ -164,8 +164,35 @@
                         <p class="descricao-icon">JavaScript</p>
                     </div>
                 </div>
+                <div class="icons-conteiner">
+                    <div>
+                        <img
+                            src="img/terminal.png"
+                            alt="Icone Terminal"
+                            class="icon-imagem"
+                        />
+                        <p class="descricao-icon">Terminal</p>
+                    </div>
+                    <div>
+                        <img
+                            src="img/git.png"
+                            alt="Icone Git"
+                            class="icon-imagem"
+                        />
+                        <p class="descricao-icon">Terminal</p>
+                    </div>
+                    <div>
+                        <img
+                            src="img/visual-studio-code.png"
+                            alt="Icone VS Code"
+                            class="icon-imagem"
+                        />
+                        <p class="descricao-icon">Terminal</p>
+                    </div>
+                </div>
                 <p class="tecno__descricao">Tecnologias</p>
                 <h3 class="techs__subtitulo">Aprofundando</h3>
+
                 <div class="icons-conteiner">
                     <img
                         src="img/nodeColorido.webp"
@@ -175,6 +202,11 @@
                     <img
                         src="img/ReactColorido.png"
                         alt="Icone React"
+                        class="icon-imagem"
+                    />
+                    <img
+                        src="img/typescript.png"
+                        alt="Icone TS"
                         class="icon-imagem"
                     />
                 </div>
