home btn larger

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <a href="https://www.jinbe.dev/" class="home__botao"
-                    >Meus últimos projetos</a
+                    >Últimos projetos / Last Projs</a
                 >
                 <div class="home__icones">
                     <a
