--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <link rel="stylesheet" href="css/style/portifolio.css" />
         <link rel="stylesheet" href="css/style/techs.css" />
         <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
+
+        <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
+
     </head>
     <body>
         <header class="cabecalho">
@@ -62,6 +65,13 @@
             <div class="home-conteiner">
                 <div>
                     <p class="home__paragrafo">Olá, eu sou 0xJinbe</p>
+
+                    <h1>Typer.js is
+                        <span class="typer" id="main" data-words="great,fun,lightweight,easy" data-delay="100" data-deleteDelay="1000"></span>
+                        <span class="cursor" data-owner="main"></span>
+                    </h1>
+                    <p>the typing effect with a pure HTML interface</p>
+
                     <h2 class="home__destaque">Claudio Germano FrontEnd Dev</h2>
                     <p class="home__paragrafo">
                         Seja bem-vindo(a) ao meu web portifólio
