--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         >
                     </li>
                     <li class="lista-menu__item">
-                        <a href="#" class="lista-menu__link">Contato</a>
+                        <a href="https://calendly.com/germano-web-dev/30min" class="lista-menu__link">Contato</a>
                     </li>
                 </ul>
             </div>
